# snman

./: .env.example  .gitignore  LICENSE  README.md  __main__.py  config.py  demo.ipynb  dictionary_demo.ipynb  example.md  get_osm_data.py  graph_sandbox.py  letsplot_test.py  link_elimination.py  main_pipeline.ipynb  main_pipeline.py  notes.md  osm_export.ipynb  polygon_import.py  prepare_simplified_street_graph.ipynb  prepare_simplified_street_graph_old.ipynb  pyproject.toml  rebuild_street_graph.ipynb  rebuild_street_graph_old.ipynb  reimport_shp.py  requirements  sandbox.py  xml_test.py
archive/: og_test.py  pipeline_example_zollikerberg.ipynb  readme.md  reimport_shp.py  scratchpad.py
development/: graph.ipynb  graph_distances.ipynb  graph_sandbox.py  map_matching.ipynb  matching_sandbox.ipynb
documentation/: copernicus.md  environment_setup.md  high_level_todos.md
examples/: analyze_street_graph.ipynb  calculate_metrics.ipynb  prepare_graph_working.ipynb  prepare_network.ipynb  prepare_simplified_street_graph.ipynb  rebuild_network.ipynb  rebuild_street_graph.ipynb  rebuild_street_graph_multi.ipynb  rebuilding_steps_in_multi.ipynb  stats.ipynb
notes/: meister.txt  overall_concerns.md  owtop_reorganization.md  pipeline_steps.md  steps.md  todos.txt
osmnx_customized/: geometries.py  settings.py  simplification.py  stats.py
osmnx_ebc/: _api.py  distance.py  downloader.py  osm_xml.py  settings.py  simplification.py
scripts_accessibility_paper/: convert_files.ipynb  gtfsutils.ipynb  matching_travel_times.ipynb  matsim_export.ipynb  merge_matsim_tt_files.ipynb  (+21 more)
(+84 files in other folders)
