[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "snman"
version = "2.0.0"
authors = [
  { name="LukasBallo" },
]
description = "Street Network Manipulator"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["snman"]
namespaces = true